--- a/HW.Web/Properties/launchSettings.json
+++ b/HW.Web/Properties/launchSettings.json
@@ -11,7 +11,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      // "launchUrl": "api/values",
+      "launchUrl": "swagger/ui/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
